plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.stockleague'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.4"
	}
}

dependencies {
	// Spring Boot 핵심 스타터
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// 보안 & 인증
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// api 문서화
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

	// 데이터베이스
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.flywaydb:flyway-core:11.8.2'
	runtimeOnly 'org.postgresql:postgresql:42.7.3'

	//Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// 재시도 로직
	implementation 'org.springframework.retry:spring-retry'

	// MapStruct (DTO <-> Entity 매핑)
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Spring boot 설정 바인딩
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	// 개발 편의 기능
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// json
	implementation 'org.json:json:20240303'

	// 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
